[package]
name = "streampay"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Can Sarıhan <sarihancan@icloud.com>"]
description = "StreamPay — real-time payment streaming and vesting on Soroban"

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
